    changemail module options, so the commitAction should be specified
    something like this:
    commitAction /.../conary/commitaction --repmap ... --module "/.../conary/changemail --user %(user)s --email foo@example.com --email bar@example.com"
    You can add your own modules and run them all from the same commitaction
    using multiple --module arguments to the commitaction script.

Changes in 0.60.8:
  * The changemail script is now actually packaged, in
    /usr/lib{,64}/python2.4/site-packages/conary/changemail
  * Build requirements for superclasses are automatically added to 
    subclasses.
  * Build requirements now look at all labels in a version to see if they
    satisfy a build requirement.
  * The NormalizeManPages policy now automatically converts man pages
    encoded in iso-8859-1 to man pages encoded in utf-8.  Additionally,
    it runs faster and no longer calls sed.

Changes in 0.60.7:
  * The changemail script is now distributed with conary, and is called
    with a different calling convention; instead of being called once
    per trove with trove-specific command line options, it is called
    once per commit (of however many troves) and creates more readable
    summary email messages.  Remove --trove, --version, and --flavor
    arguments from your changemail invocations.  Added --user argument
    to changemail; specify in .cnr files as "--user %(user)s".  Or, to
    only print users for source or binary commits, use "--sourceuser
    %(user)s" or "--binaryuser %(user)s", respectively.
  * The cvc rdiff command now recognizes creating a shadow as such.
  * Build requirement tracking is now half-enabled; conary is now able
    to read "buildReqs" tags, but will not yet generate them.
  * Files in /tmp and /var/tmp, and all cvs temporary files, will no
    longer be packaged by default,
  * The addArchive(), addSource(), and addPatch() actions can now fetch
    via HTTPS as well as HTTP and FTP.